--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/libreria
+spring.datasource.url = jdbc:mysql://localhost:3306/libreria
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Indica si debe mostrar el log de las consultas sql ejecutadas
-spring.jpa.show-sql: true 
-# Configurar Hibernate
-spring.jpa.hibernate.ddl-auto: update
-# he SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect 
-#  mostrar sql
-spring.jpa.properties.hibernate.format_sql=true
-# mostrar el error de sql
-logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql:true
